--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "adapterjs": "^0.15.4",
     "rtcmulticonnection": "^3.7.0",
+    "socket.io": "^3.1.0",
+    "socket.io-client": "^3.1.0",
     "url-parse": "^1.4.7",
     "vue": "^2.6.11"
   },
